# android-compose-bazel

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  build.gradle  settings.gradle
app/: BUILD.bazel  build.gradle
app/src/androidTest/java/com/example/android_compose_bazel/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/android_compose_bazel/: MainActivity.kt
app/src/main/java/com/example/android_compose_bazel/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/android_compose_bazel/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
