load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_android_library")
load("@rules_android//android:rules.bzl", "android_binary")
load("@rules_jvm_external//:defs.bzl", "artifact")

kt_android_library(
    name = "app",
    srcs = glob(["src/main/java/**/*.kt"]),
    resource_files = glob(["src/main/res/**"]),
    custom_package = "com.sample.android_compose_bazel",
    manifest = "src/main/AndroidManifest.xml",
    plugins  = ["//:jetpack_compose_compiler_plugin"],
    visibility = ["//visibility:public"],
    deps = [
        artifact("org.jetbrains.kotlin:kotlin-stdlib"),
        artifact("androidx.core:core-ktx"),
        artifact("androidx.compose.ui:ui"),
        artifact("androidx.compose.material:material"),
        artifact("androidx.compose.ui:ui-tooling-preview"),
        artifact("androidx.lifecycle:lifecycle-runtime-ktx"),
        artifact("androidx.activity:activity-compose"),
    ],
)

android_binary(
    name = "bin",
    custom_package = "com.example.android_compose_bazel",
    manifest = "src/main/AndroidManifest.xml",
    manifest_values = {
        "minSdkVersion": "29",
        "targetSdkVersion": "31",
        "versionCode": "1",
        "versionName": "1.0",
    },
    multidex = "native",
    incremental_dexing = 1,
    deps = [":app"],
    visibility = ["//visibility:public"],
)